# notebooks

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  Agents.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  semgrep.yaml  uv.toml
.devcontainer/: Dockerfile.dev
.github/: renovate.json  renovate.json5
.tekton/: README.md  datascience-poc-pull-request.yaml  datascience-poc-push.yaml  image-registry.yaml  jupyter-minimal-ubi9-python-3-11-pull-request.yaml  jupyter-minimal-ubi9-python-3-11-push.yaml  multiarch-combined-pipeline.yaml  multiarch-odh-main-combined-pipeline.yaml  multiarch-push-pipeline.yaml  notebooks-codeserver-poc-push.yaml  notebooks-datascience-poc-push.yaml  notebooks-minimal-gpu-poc-push.yaml  notebooks-pytorch-poc-push.yaml  notebooks-rocm-minimal-poc-pull-request.yaml  notebooks-rocm-minimal-poc-push.yaml  notebooks-rocm-pull-request.yaml  notebooks-rocm-push.yaml  notebooks-rocm-pytorch-poc-push.yaml  notebooks-rocm-tensorflow-poc-push.yaml  notebooks-tensorflow-poc-push.yaml  notebooks-trustyai-poc-push.yaml  notebooksminimal-poc-push.yaml  odh-base-image-cpu-py312-c9s-pull-request.yaml  odh-base-image-cpu-py312-ubi9-pull-request.yaml  odh-base-image-cuda-12-8-py312-c9s-pull-request.yaml  odh-base-image-cuda-12-8-py312-ubi9-pull-request.yaml  odh-base-image-cuda-py311-c9s-pull-request.yaml  odh-base-image-cuda-py312-c9s-pull-request.yaml  odh-base-image-cuda-py312-ubi9-pull-request.yaml  odh-base-image-rocm-6-3-py312-c9s-pull-request.yaml  odh-base-image-rocm-6-3-py312-ubi9-pull-request.yaml  odh-base-image-rocm-6-4-py312-c9s-pull-request.yaml  odh-base-image-rocm-6-4-py312-ubi9-pull-request.yaml  odh-base-image-rocm-py312-c9s-pull-request.yaml  odh-base-image-rocm-py312-ubi9-pull-request.yaml  odh-pipeline-runtime-datascience-cpu-py311-v2-24-push.yaml  odh-pipeline-runtime-datascience-cpu-py312-pull-request.yaml  odh-pipeline-runtime-datascience-cpu-py312-test2-pull-request.yaml  odh-pipeline-runtime-datascience-cpu-py312-test2-push.yaml  odh-pipeline-runtime-datascience-cpu-py312-ubi9-push.yaml  (+436 more)
ci/: check-params-env-rhoai.sh  check-params-env.sh  check-runtime-images.sh  check-software-versions.py  expected-image-metadata.yaml  find_images_for_test_matrix.py  generate_code.sh  package_versions.py
codeserver/ubi9-python-3.12/: Dockerfile.cpu  Dockerfile.konflux.cpu  Dockerfile.vath  README.md  build-params.yaml  devel_env_setup.sh  get_code_server_rpm.sh  pylock.toml  pyproject.toml  requirements.cpu-ripgrep.txt  requirements.cpu.txt  run-code-server.sh  run-nginx.sh
codeserver/ubi9-python-3.12/build-args/: cpu.conf  konflux.cpu.conf
codeserver/ubi9-python-3.12/nginx/root/opt/app-root/: nginxconf.sed
codeserver/ubi9-python-3.12/nginx/serverconf/: proxy.conf.template  proxy.conf.template_nbprefix
codeserver/ubi9-python-3.12/patches/: vscode-tsgo.ts
codeserver/ubi9-python-3.12/prefetch-input/: hermeto.json  package-lock.json  package.json
codeserver/ubi9-python-3.12/prefetch-input/odh/: rpms.in.yaml  rpms.lock.yaml
codeserver/ubi9-python-3.12/prefetch-input/patches/: apply-patch.sh  codeserver-offline-env.sh  copy-gha-native-bindings.sh  setup-offline-binaries.sh
codeserver/ubi9-python-3.12/prefetch-input/patches/code-server-v4.106.3/lib/vscode/extensions/emmet/: package-lock.json  package.json
codeserver/ubi9-python-3.12/prefetch-input/patches/code-server-v4.112.0/ci/dev/: postinstall.sh
codeserver/ubi9-python-3.12/prefetch-input/patches/code-server-v4.112.0/custom-packages/: package-lock.json  package.json
codeserver/ubi9-python-3.12/prefetch-input/patches/code-server-v4.112.0/image-size/: icns.js
codeserver/ubi9-python-3.12/prefetch-input/patches/code-server-v4.112.0/lib/vscode/: package-lock.json  package.json
codeserver/ubi9-python-3.12/prefetch-input/patches/code-server-v4.112.0/lib/vscode/extensions/emmet/: package-lock.json  package.json
codeserver/ubi9-python-3.12/prefetch-input/patches/code-server-v4.112.0/lib/vscode/extensions/microsoft-authentication/: package-lock.json  package.json
codeserver/ubi9-python-3.12/prefetch-input/patches/code-server-v4.112.0/lib/vscode/remote/: package-lock.json  package.json
codeserver/ubi9-python-3.12/prefetch-input/rhds/: artifacts.in.yaml  artifacts.lock.yaml  rpms.in.yaml  rpms.lock.yaml
codeserver/ubi9-python-3.12/utils/: install_with_retry.sh
codeserver/ubi9-python-3.12/uv.lock.d/: pylock.cpu.toml  rh-wheel-only.ref.toml
dependencies/: README.md  constraints.txt  cve-constraints.txt  overrides.txt
docs/: fetching_registry_redhat_io_index.md  gateway-api-migration-guide.md  hermetic-guide.md  konflux.md  workbenches-naming.md
jupyter/minimal/ubi9-python-3.12/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.konflux.cpu  Dockerfile.konflux.cuda  Dockerfile.konflux.rocm  Dockerfile.rocm  cuda-pip.conf  pylock.toml  pyproject.toml
jupyter/minimal/ubi9-python-3.12/build-args/: cpu.conf  cuda.conf  konflux.cpu.conf  konflux.cuda.conf  konflux.rocm.conf  rocm.conf
jupyter/minimal/ubi9-python-3.12/kustomize/base/: statefulset.yaml
jupyter/minimal/ubi9-python-3.12/uv.lock/: pylock.cpu.toml  pylock.cuda.toml  pylock.rocm.toml
jupyter/minimal/ubi9-python-3.12/uv.lock.d/: pylock.cpu.toml  pylock.cuda.toml  pylock.rocm.toml
jupyter/pytorch/ubi9-python-3.12/: Dockerfile.cuda  Dockerfile.konflux.cuda  pylock.toml  pyproject.toml  requirements.cuda.txt
jupyter/pytorch/ubi9-python-3.12/build-args/: cuda.conf  konflux.cuda.conf
jupyter/pytorch/ubi9-python-3.12/uv.lock.d/: pylock.cuda.toml
jupyter/rocm/tensorflow/ubi9-python-3.12/: Dockerfile.konflux.rocm  Dockerfile.rocm  pylock.toml  pyproject.toml  requirements.rocm.txt
jupyter/rocm/tensorflow/ubi9-python-3.12/build-args/: konflux.rocm.conf  rocm.conf
jupyter/rocm/tensorflow/ubi9-python-3.12/uv.lock.d/: pylock.rocm.toml
runtimes/minimal/ubi9-python-3.12/: Dockerfile.cpu  Dockerfile.konflux.cpu  pylock.toml  pyproject.toml
runtimes/minimal/ubi9-python-3.12/build-args/: cpu.conf  konflux.cpu.conf
runtimes/minimal/ubi9-python-3.12/uv.lock.d/: pylock.cpu.toml
scripts/: sandbox.py  (+10 more)
(+687 files in other folders)
