[project]
name = "notebooks"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Hermetic code-server build (prefetched for setup-offline-binaries.sh / npm ci)
    "uv==0.11.26",
    "ripgrep==15.1.0",

    # Base packages
    "wheel~=0.46.2",
    "setuptools~=83.0.0",

    # Datascience packages
    "boto3~=1.40.52",
    "kafka-python-ng~=2.2.3",
    "matplotlib~=3.10.7",
    "numpy~=2.3.5",
    "pandas~=2.3.3",
    "plotly~=6.3.1",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.2",
    "skl2onnx~=1.19.1; platform_machine != 's390x'",
    "ipykernel~=6.30.1",
    "kubeflow-training==1.9.3",
    "feast~=0.59.0",

    # Some extra useful packages
    "opencensus~=0.11.4",
    "smart-open~=7.3.1",
    "virtualenv~=20.36.1",
    "prometheus-client~=0.23.1",
]

[tool.uv]
exclude-dependencies = ["py-spy"]

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
override-dependencies = [
    # Scoped to codeserver for RHAIENG-6201 backport (avoid repo-wide lock churn).
    "pyasn1>=0.6.4",
    "urllib3>=2.7.0",
    "cryptography>=48.0.1",
    "pillow>=12.3.0",
    "starlette>=1.3.1",
    "pyjwt>=2.13.0",
    "protobuf>=6.33.5",
    "onnx>=1.21.0",
    "idna>=3.15",
    "jupyterlab>=4.6.2",
    "pyarrow>=23.0.1",
    "setuptools>=83.0.0",
]
