[project]
name = "minimal-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # JupyterLab packages
    "odh-jupyter-trash-cleanup==0.1.1",

    "jupyterlab==4.4.9",
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab-git~=0.51.2",
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",

    # Base packages
    "wheel~=0.46.2",
    "setuptools~=80.9.0",
]

[tool.uv]
override-dependencies = [
    # RHOAIENG-59282 + RHOAIENG-54270: CVE-2026-23490 + CVE-2026-30922 pyasn1 DoS vulnerabilities
    "pyasn1>=0.6.3",
]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
