[project]
name = "pytorch-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # PyTorch packages
    "tensorboard~=2.20.0", 
    "torch==2.7.1",
    "torchvision==0.23.0",  

    # Datascience and useful extensions
    "boto3~=1.40.27",
    "kafka-python-ng~=2.2.3",
    "kfp~=2.14.3",
    "matplotlib~=3.10.6",
    "numpy~=2.3.3",
    "pandas~=2.3.2",
    "plotly~=6.3.0",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.1",
    "skl2onnx~=1.19.1",
    "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
    "codeflare-sdk~=0.31.1",
    "kubeflow-training==1.9.3",

    # DB connectors
    "pymongo~=4.14.1",
    "psycopg~=3.2.10",
    "pyodbc~=5.2.0",
    "mysql-connector-python~=9.4.0",

    # JupyterLab packages
    "odh-elyra==4.2.4",  # This should be added on the aipcc index as well

    # JupyterLab packages
    "odh-jupyter-trash-cleanup==0.1.1", # This should be added on the aipcc index as well

    "jupyterlab==4.4.9", # This had to be upgraded from 4.4.7 to 4.4.9
    "jupyter-bokeh~=4.0.5",     # This should be added on the aipcc index as well
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab-git~=0.51.2",
    "jupyterlab-lsp~=5.1.1", # This is dependet with odh-elyra we can not use aipcc wheels to install as is yet
    "jupyterlab-widgets~=3.0.15",   # This should be added on the aipcc index as well
    "jupyter-resource-usage~=1.1.1", # This should be added on the aipcc index as well
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",
    "feast~=0.54.0", #Just for experimentation

    # Base packages
    "wheel~=0.45.1",
    "setuptools~=80.9.0",
]

[tool.uv.sources]
torch = {index = "aipcc-stage-index"}
torchvision = {index = "aipcc-stage-index"}

jupyterlab = {index = "aipcc-stage-index"}
jupyter-server = {index = "aipcc-stage-index"}
jupyter-server-proxy = {index = "aipcc-stage-index"}
jupyter-server-terminals = {index = "aipcc-stage-index"}
jupyterlab-git = {index = "aipcc-stage-index"}
nbdime = {index = "aipcc-stage-index"}
nbgitpuller = {index = "aipcc-stage-index"}
feast = {index = "aipcc-stage-index"}
wheel = {index = "aipcc-stage-index"}
setuptools = {index = "aipcc-stage-index"}

# https://docs.astral.sh/uv/concepts/indexes/#package-indexes
[[tool.uv.index]]
name = "aipcc-stage-index"
url = "https://private.console.redhat.com/api/pypi/rhai-stage/rhoai/3.0/cuda-ubi9/simple/"
explicit = true

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
