[project]
name = "minimal-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "odh-notebooks-meta-runtime-elyra-deps",

    # Base packages
    "setuptools==80.9.0",
    "wheel~=0.46.2",
]

[tool.uv]
override-dependencies = [
    # RHOAIENG-59282: CVE-2026-23490 pyasn1 DoS via malformed RELATIVE-OID parsing
    "pyasn1>=0.6.2",
]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]

[tool.uv.sources]
odh-notebooks-meta-runtime-elyra-deps = { path = "../../../dependencies/odh-notebooks-meta-runtime-elyra-deps" }
