[project]
name = "minimal-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "odh-notebooks-meta-runtime-elyra-deps",

    # Base packages
    "setuptools==80.9.0",
    "wheel~=0.46.2",
]

[tool.uv]
override-dependencies = [
    # RHOAIENG-59282 + RHOAIENG-54270: CVE-2026-23490 + CVE-2026-30922 pyasn1 DoS vulnerabilities
    "pyasn1>=0.6.3",
]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]

[tool.uv.sources]
odh-notebooks-meta-runtime-elyra-deps = { path = "../../../dependencies/odh-notebooks-meta-runtime-elyra-deps" }
