[project]
name = "rocm-tensorflow-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "tf2onnx~=1.16.1",

    # ROCm TensorFlow packages
    # https://rocm.docs.amd.com/projects/install-on-linux/en/latest/install/3rd-party/tensorflow-install.html#using-a-wheels-package
    "tensorflow-rocm @ https://repo.radeon.com/rocm/manylinux/rocm-rel-6.3/tensorflow_rocm-2.17.0-cp312-cp312-manylinux_2_28_x86_64.whl",
    "tensorboard~=2.17.0",

    # Datascience and useful extensions
    "boto3~=1.40.27",
    "kafka-python-ng~=2.2.3",
    "kfp~=2.14.3",
    "matplotlib~=3.10.6",
    "numpy~=1.26.4",
    "pandas~=2.3.2",
    "plotly~=6.3.0",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.1",
    "skl2onnx~=1.19.1",
    "onnxconverter-common~=1.13.0", # Required for skl2onnx, as upgraded version is not compatible with protobuf
    "codeflare-sdk~=0.31.1",
    "kubeflow-training==1.9.3",

    # DB connectors
    "pymongo~=4.14.1",
    "psycopg~=3.2.10",
    "pyodbc~=5.2.0",
    "mysql-connector-python~=9.4.0",

    # JupyterLab packages
    "odh-elyra==4.2.4",
    "odh-jupyter-trash-cleanup==0.1.1",

    "jupyterlab==4.4.7",
    "jupyter-bokeh~=4.0.5",
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab-git~=0.51.2",
    "jupyterlab-lsp~=5.1.0",
    "jupyterlab-widgets~=3.0.15",
    "jupyter-resource-usage~=1.1.1",
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",

    # Base packages
    "wheel~=0.45.1",
    "setuptools~=80.9.0",
]

[tool.uv]

override-dependencies = [
    # tf2onnx has pinned protobuf version, that causes conflict with other packages
    "protobuf==6.31.1"
]

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
